[#148] refactor: 비로그인 시 로그인페이지로 유도

--- a/src/pages/BookList/BookModal.module.css
+++ b/src/pages/BookList/BookModal.module.css
@@ -154,3 +154,45 @@
   border-style: solid;
   border-color: #555 transparent transparent transparent;
 }
+
+.libraryTooltip {
+  visibility: hidden;
+  width: fit-content;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 10px;
+  position: absolute;
+  z-index: 1;
+  top: 170%;
+  left: 25%;
+  margin-left: -100px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltipContainer:hover .libraryTooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
+.libraryTooltip::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 30%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent #555 transparent;
+}
+
+.toLibraryButton > a {
+  text-decoration: none;
+  color: inherit;
+  border: 1px solid black;
+  padding: 7px 12px;
+  border-radius: 50px;
+  background-color: var(--sub-color);
+}
