--- a/src/pages/MyBook/BookInfo.module.css
+++ b/src/pages/MyBook/BookInfo.module.css
@@ -55,7 +55,9 @@
 
 .status {
   display: flex;
-  justify-content: end;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: end;
   width: 20%;
 }
 
@@ -82,6 +84,10 @@
 .bookStatusEdit {
   right: -5px;
   top: 0px;
+  cursor: pointer;
+}
+
+.deleteUserbook {
   cursor: pointer;
 }
 
