--- a/src/pages/MyActivity/ListComponent.module.css
+++ b/src/pages/MyActivity/ListComponent.module.css
@@ -7,12 +7,28 @@
   border-radius: 4px;
   margin-bottom: 20px;
   gap: 10px;
+  padding: 10px;
+}
+
+/* WebKit browsers (Chrome, Safari) */
+.listContainer::-webkit-scrollbar {
+  width: 10px;
+}
+
+.listContainer::-webkit-scrollbar-thumb {
+  background: var(--accent-sub-color);
+  border-radius: 10px;
+}
+
+.listContainer::-webkit-scrollbar-track {
+  background: var(--main-color);
 }
 
 .listItem {
   display: flex;
   align-items: center;
-  height: 50px;
+  min-height: 50px;
+  max-height: 50px;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 20px;
