--- a/src/pages/MyActivity/Rental.module.css
+++ b/src/pages/MyActivity/Rental.module.css
@@ -51,6 +51,7 @@
 }
 
 .listItem > div:first-child {
+  width: 85%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -61,6 +62,7 @@
   margin: 20px auto;
   height: 380px;
   align-items: center;
+  overflow: hidden;
 }
 
 .modalContent {
@@ -73,7 +75,12 @@
 }
 
 .modalBookImg {
+  height: 100%;
   width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .modalBookInfo {
@@ -88,7 +95,8 @@
 
 .modalBookImg img {
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  max-height: 100%;
 }
 
 .rentalInfo {
