--- a/src/pages/MyLibrary/MyLibrary.module.css
+++ b/src/pages/MyLibrary/MyLibrary.module.css
@@ -81,3 +81,26 @@
   display: flex;
   gap: 5px;
 }
+
+.emptyCategory {
+  border: 2px dashed var(--sub-color);
+  border-radius: 8px;
+  padding: 15px;
+  width: 100%;
+  height: 235.39px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.emptyCategory:hover {
+  background-color: var(--sub-color);
+}
+
+.emptyCategory span {
+  font-size: 40px;
+  color: var(--accent-color);
+}
