--- a/src/pages/MyBook/BookInfo.module.css
+++ b/src/pages/MyBook/BookInfo.module.css
@@ -101,3 +101,14 @@
   justify-content: center;
   align-items: center;
 }
+
+.rentalDate {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  font-size: 18px;
+}
+
+.rentalDate strong {
+  color: var(--contrast-color)
+}
