--- a/src/pages/MyBook/Registered.module.css
+++ b/src/pages/MyBook/Registered.module.css
@@ -34,9 +34,17 @@
 }
 
 .registeredUserbooksList::-webkit-scrollbar {
-  /* display: none; */
+  width: 10px;
+}
+
+.registeredUserbooksList::-webkit-scrollbar-thumb {
   background-color: var(--accent-sub-color);
   border-radius: 10px;
-  line-height: 1.15;
-  width: 10px;
+  height: 30px;
+  min-height: 30px;
+}
+
+.registeredUserbooksList::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 10px;
 }
