--- a/src/pages/MyPage/MyPage.module.css
+++ b/src/pages/MyPage/MyPage.module.css
@@ -10,9 +10,10 @@
 .MyPage {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   flex: 1;
-  width: 80%;
+  width: 100%;
   align-self: center;
 }
 
@@ -20,8 +21,8 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  justify-content: flex-end;
-  width: 100%;
+  justify-content: space-around;
+  width: 80%;
   padding: 20px;
 }
 
@@ -34,7 +35,7 @@
 
 .main_container_update {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   width: 100%;
   height: 120px;
   align-items: center;
