--- a/src/pages/MyActivity/History.module.css
+++ b/src/pages/MyActivity/History.module.css
@@ -160,6 +160,17 @@
   width: 100%;
 }
 
+.exchangeBook > div {
+  width: 45%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.exchangeBook > div:last-child {
+  text-align: right;
+}
+
 .listHeader {
   display: flex;
   justify-content: space-between;
