--- a/src/components/Chatting/ChatList.module.css
+++ b/src/components/Chatting/ChatList.module.css
@@ -1,33 +1,61 @@
 .chatList {
   flex-grow: 1;
   overflow-y: auto;
-  padding: 35px 0px;
+  padding: 50px 10px;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: 80px;
+  visibility: inherit;
+}
+
+.chatListItem {
+  background-color: var(--sub-color);
+  background: linear-gradient(135deg, var(--sub-color), var(--accent-sub-color));
+  /* background: radial-gradient(circle 70px at 5% 15%, var(--accent-sub-color), var(--sub-color)); */
+  background: radial-gradient(circle 80px at 5% 15%, var(--sub-color), var(--accent-sub-color));
+  width: 75px;
+  height: 75px;
+  border: 1.85px solid var(--accent-color);
+  border-radius: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  align-content: center;
+  justify-self: center;
+  cursor: pointer;
+  visibility: inherit;
   position: relative;
 }
 
-.sideMenuButton {
-  border-radius: 22px;
-  width: 35px;
-  height: 35px;
-  padding: 7px;
+.chatListItem:hover {
+  background: var(--accent-sub-color);
 }
 
-.chatSideMenu:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-.sideMenu {
+.newMessage {
   position: absolute;
-  right: -200px;
-  top: 0;
-  width: 200px;
-  background-color: var(--contrast-color);
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-  transform: translateX(100%);
-  transition: transform 0.3s ease-in-out;
-  z-index: 1000;
+  top: -10px;
+  right: 0;
+  border-radius: 100%;
+  color: var(--accent-color);
+  padding: 2px;
+  animation : shakeAlert 1s infinite linear;
 }
 
-.chatRoomItem.open .sideMenu {
-  transform: translateX(0);
+@keyframes shakeAlert {
+  0% {
+    transform: translateX(0) translateY(0);
+  }
+  25% {
+    transform: translateX(-3px) translateY(1px) rotate(-15deg);
+  }
+  50% {
+    transform: translateX(0) translateY(0);
+  }
+  75% {
+    transform: translateX(3px) translateY(1px) rotate(15deg);
+  }
+  100% {
+    transform: translateX(0) translateY(0);
+  }
 }
