--- a/src/components/Chatting/PhoneTopBar.module.css
+++ b/src/components/Chatting/PhoneTopBar.module.css
@@ -6,7 +6,6 @@
   height: 40px;
   padding: 0px 16px;
   background-color: inherit;
-  /* background-color: var(--main-color); */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -27,7 +26,7 @@
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: #000;
+  background-color: var(--accent-color);
   transform: translateX(-50%);
-  z-index: 2;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.23);
 }
