[#163] refactor: 채팅 디자인 수정 및 페이지네이션

--- a/src/components/Chatting/ChatModalHeader.module.css
+++ b/src/components/Chatting/ChatModalHeader.module.css
@@ -16,3 +16,9 @@
 .modalTitle {
   align-self: center;
 }
+
+.modalHeader > button {
+  display: flex;
+  justify-content: start;
+  padding: 0px;
+}
