--- a/src/components/Chatting/ChatButton.module.css
+++ b/src/components/Chatting/ChatButton.module.css
@@ -6,8 +6,8 @@
 
 .newMessage {
   position: absolute;
-  top: 0;
-  right: 1px;
+  top: -10px;
+  right: -10px;
   animation : shakeAlert 1s infinite linear;
 }
 
