--- a/src/components/Chatting/ChatList.module.css
+++ b/src/components/Chatting/ChatList.module.css
@@ -1,7 +1,7 @@
 .chatList {
   flex-grow: 1;
-  overflow-y: auto;
   padding: 50px 10px;
+  padding-bottom: 15px;
   position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -12,12 +12,10 @@
 
 .chatListItem {
   background-color: var(--sub-color);
-  background: linear-gradient(135deg, var(--sub-color), var(--accent-sub-color));
-  /* background: radial-gradient(circle 70px at 5% 15%, var(--accent-sub-color), var(--sub-color)); */
-  background: radial-gradient(circle 80px at 5% 15%, var(--sub-color), var(--accent-sub-color));
-  width: 75px;
-  height: 75px;
-  border: 1.85px solid var(--accent-color);
+  background: var(--sub-color);
+  width: 72px;
+  height: 72px;
+  /* border: 1.85px solid var(--accent-color); */
   border-radius: 100%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
@@ -34,8 +32,8 @@
 
 .newMessage {
   position: absolute;
-  top: -10px;
-  right: 0;
+  top: -18px;
+  right: -7px;
   border-radius: 100%;
   color: var(--accent-color);
   padding: 2px;
