--- a/src/components/Chatting/ChatModal.module.css
+++ b/src/components/Chatting/ChatModal.module.css
@@ -76,7 +76,7 @@
   padding: 16px;
   display: flex;
   flex-direction: column;
-  border: 5px solid var(--accent-color);
+  border: 5px solid black;
   border-radius: 20px;
   overflow: hidden;
   z-index: 800;
@@ -108,12 +108,31 @@
   left: 45%;
 }
 
+.pagination {
+  display: flex;
+  height: 30px;
+  justify-content: center;
+  gap: 5px;
+  align-items: center;
+  padding-bottom: 50px;
+  position: relative;
+}
+
+.pagination button {
+  margin: 0 5px;
+  padding: 2px 4px;
+  justify-content: center;
+  background-color: white;
+  border: none;
+  color: var(--accent-sub-color);
+}
+
 .modalFooter {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 68px;
+  height: 55px;
   padding: 0px 16px;
   display: flex;
   align-items: center;
