--- a/src/components/Chatting/PhoneTopBar.module.css
+++ b/src/components/Chatting/PhoneTopBar.module.css
@@ -26,7 +26,7 @@
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: var(--accent-color);
+  background-color: black;
   transform: translateX(-50%);
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.23);
 }
