--- a/src/components/Chatting/ChatList.module.css
+++ b/src/components/Chatting/ChatList.module.css
@@ -35,7 +35,7 @@
   top: -18px;
   right: -7px;
   border-radius: 100%;
-  color: var(--accent-color);
+  color: var(--contrast-color);
   padding: 2px;
   animation : shakeAlert 1s infinite linear;
 }
