[#163] chore: 스크롤바제거

--- a/src/components/Chatting/ChatRoom.module.css
+++ b/src/components/Chatting/ChatRoom.module.css
@@ -16,6 +16,10 @@
   position: relative;
 }
 
+.messagesContainer::-webkit-scrollbar {
+  display: none;
+}
+
 .message {
   display: flex;
   margin: 10px;
