--- a/src/pages/MyLibrary/MyLibrary.module.css
+++ b/src/pages/MyLibrary/MyLibrary.module.css
@@ -104,3 +104,15 @@
   font-size: 40px;
   color: var(--accent-color);
 }
+
+.emptyCategoryNotOwn {
+  border: 2px dashed var(--sub-color);
+  border-radius: 8px;
+  padding: 15px;
+  width: 100%;
+  height: 235.39px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
