--- a/src/pages/MyLibrary/CategoryItem.module.css
+++ b/src/pages/MyLibrary/CategoryItem.module.css
@@ -3,7 +3,6 @@
   border-radius: 8px;
   padding: 15px;
   margin-bottom: 15px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   transition: box-shadow 0.3s ease;
   width: 100%;
   /* height: 300px; */
@@ -11,7 +10,7 @@
   flex-direction: column;
   gap: 10px;
   cursor: pointer;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5); /* 그림자 추가 */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
   background-color: var(--sub-color);
 }
 
