[#169] refactor: 코드리팩토링 -2

--- a/src/components/Chatting/ChatModal.module.css
+++ b/src/components/Chatting/ChatModal.module.css
@@ -1,7 +1,7 @@
 :global(.MuiInputBase-root),
 :global(.MuiTypography-root),
 :global(.MuiButtonBase-root) {
-  font-family: "samsungGodik", sans-serif;
+  font-family: "samsungGodik", sans-serif !important;
   text-decoration: none !important;
 }
 
