[#170] refactor: QA기반 사용성 개선

--- a/src/pages/BookList/BookList.module.css
+++ b/src/pages/BookList/BookList.module.css
@@ -4,6 +4,20 @@
   overflow-y: auto;
 }
 
+.main::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+.main::-webkit-scrollbar-thumb {
+  background: var(--accent-sub-color);
+  border-radius: 10px;
+}
+
+.main::-webkit-scrollbar-track {
+  background: var(--main-color);
+}
+
 .onlineUsersWrapper {
   position: relative;
 }
