[#170] chore: 채팅 일부 수정

--- a/src/components/Chatting/ChatModal.module.css
+++ b/src/components/Chatting/ChatModal.module.css
@@ -127,6 +127,14 @@
   color: var(--accent-sub-color);
 }
 
+.pagination button:disabled {
+  color: gray
+}
+
+.pagination button:hover:not(:disabled) {
+  color: var(--accent-color);
+}
+
 .modalFooter {
   position: absolute;
   bottom: 0;
