--- a/src/pages/MyLibrary/CategoryItem.module.css
+++ b/src/pages/MyLibrary/CategoryItem.module.css
@@ -5,7 +5,6 @@
   margin-bottom: 15px;
   transition: box-shadow 0.3s ease;
   width: 100%;
-  /* height: 300px; */
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -15,7 +14,7 @@
 }
 
 .categoryItem:hover {
-  transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s; /* transform에 대한 transition 추가 */
+  transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
 }
 
 .header {
