--- a/src/pages/MyLibrary/MyLibrary.module.css
+++ b/src/pages/MyLibrary/MyLibrary.module.css
@@ -3,11 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center; 
-  height: calc(100vh - 105px);  /* 헤더 60px, 타이틀 박스 45px > 105px */
+  height: calc(100vh - 105px);
   overflow-y: auto;
 }
 
-/* WebKit browsers (Chrome, Safari) */
 .main::-webkit-scrollbar {
   width: 10px;
   height: 10px;
@@ -58,7 +57,7 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5); /* 그림자 추가 */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
 }
 
 .createButton:hover {
